# dev-machine-guard

./: .gitignore  .goreleaser.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SCAN_COVERAGE.md  SECURITY.md  go.mod  go.sum  stepsecurity-dev-machine-guard.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: release.yml  test-build.yml  tests.yml
cmd/stepsecurity-dev-machine-guard/: main.go
cmd/stepsecurity-dev-machine-guard-task/: main.go
docs/: adding-detections.md  community-mode.md  macos-tcc-permissions.md  reading-scan-results.md  release-process.md
docs/plans/: ai-agent-hooks-backlog.md  ai-agent-hooks-port-plan.md
examples/: sample-output.json
internal/aiagents/: doc.go
internal/buildinfo/: version.go
internal/cli/: cli.go  cli_devflags_test.go  cli_test.go
internal/config/: config.go  config_nonint_test.go  config_test.go
internal/detector/: agent.go  agent_test.go  aicli.go  aicli_test.go  brew.go  brew_test.go  brewscan.go  eclipse_plugins.go  eclipse_plugins_test.go  extension.go  framework.go  framework_test.go  ide.go  ide_test.go  jetbrains.go  jetbrains_plugins.go  jetbrains_plugins_test.go  jetbrains_test.go  lockfile.go  lockfile_test.go  mcp.go  mcp_discovery.go  mcp_discovery_test.go  mcp_test.go  nodedist.go  nodedist_bun.go  nodedist_global.go  nodedist_global_test.go  nodedist_modules.go  nodedist_npm.go  nodedist_pnpm.go  (+38 more)
src/: detect.rs  enterprise.rs  main.rs  node_scan.rs  output.rs  types.rs  util.rs
tests/: test_rc_audit.sh  test_smoke.sh
(+191 files in other folders)
