[package]
name = "stepsecurity-dev-machine-guard"
version = "1.8.1"
edition = "2021"
description = "Open-source tool to scan developer environments for IDEs, AI tools, extensions, and MCP server configurations"
license = "Apache-2.0"
repository = "https://github.com/step-security/dev-machine-guard"

[[bin]]
name = "stepsecurity-dev-machine-guard"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
strip = true
